# credit-card-mlops

./: .gitignore  Dockerfile  Dockerfile.api  Dockerfile.mlflow  Dockerfile.mlflow.save  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt  wait-for-mlflow.sh
.github/workflows/: ci-cd.yml  ci-cd.yml.save  train.yml
config/: model_config.yaml
mlflow/: mlflow.db
mlflow-data/: mlflow.db
mlflow-data/artifacts/1/models/m-6638dd6015bc458181e22087510649ea/artifacts/: MLmodel
mlflow-data/artifacts/1/models/m-7887f3912c8e40a483a57f48d91a93f2/artifacts/: MLmodel
mlflow-data/artifacts/1/models/m-aff1e2dddfc54d20862a2d7d05366d87/artifacts/: MLmodel
scripts/: setup_mlflow.sh
src/api/: main.py  main.py.save
src/models/: train.py
