[tool.poetry]
name = "credit-card-fraud-detection"
version = "0.1.0"
description = "MLOps pipeline for credit card fraud detection"
authors = ["Manish Sahu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
numpy = "^1.24.3"
scikit-learn = "^1.3.0"
xgboost = "^1.7.5"
mlflow = "^2.8.0"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"

[tool.poetry.scripts]
train-model = "src.models.train:main"
start-api = "src.api.main:start_server"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
